--- a/deadbeef/config
+++ b/deadbeef/config
@@ -71,15 +71,17 @@ hotkey.key36 "Ctrl Right" 0 0 seek_5p_fwd
 hotkey.key37 "Ctrl Left" 0 0 seek_5p_back
 hotkey.key38 "Shift Right" 0 0 seek_1p_fwd
 hotkey.key39 "Shift Left" 0 0 seek_1p_back
+hotkey.key40 "Right" 0 0 next
+hotkey.key41 "Left" 0 0 prev
 hotkeys_created 1
 ignore_archives 1
 junk.enable_cp1251_detection 1
 junk.enable_cp936_detection 1
-mainwin.geometry.h 746
+mainwin.geometry.h 622
 mainwin.geometry.maximized 1
-mainwin.geometry.w 1200
-mainwin.geometry.x 139
-mainwin.geometry.y 79
+mainwin.geometry.w 1198
+mainwin.geometry.x 1764
+mainwin.geometry.y 217
 mpris_v1.enable 0
 mpris_v2.enable 1
 network.http_user_agent deadbeef
@@ -89,26 +91,26 @@ playback.loop 0
 playback.order 1
 playback.volume 0.0000000
 playlist.column.00 "#" "%n" -1 37 0
-playlist.column.01 "Title" "%t" -1 513 0
+playlist.column.01 "Title" "%t" -1 506 0
 playlist.column.02 "Artist" "%a" -1 219 0
 playlist.column.03 "Album" "%b" -1 243 0
 playlist.column.04 "Duration" "%l" -1 80 0
-playlist.current 0
-playlist.cursor.0 2902
+playlist.current 5
+playlist.cursor.0 2016
 playlist.cursor.1 34
 playlist.cursor.2 -1
 playlist.cursor.3 -1
 playlist.cursor.4 -1
-playlist.cursor.5 -1
-playlist.cursor.6 -1
+playlist.cursor.5 0
+playlist.cursor.6 0
 playlist.cursor.7 -1
-playlist.scroll.0 78012
+playlist.scroll.0 54090
 playlist.scroll.1 642
-playlist.scroll.2 139
-playlist.scroll.3 2802
-playlist.scroll.4 0
+playlist.scroll.2 2802
+playlist.scroll.3 0
+playlist.scroll.4 37586
 playlist.scroll.5 0
-playlist.scroll.6 37586
+playlist.scroll.6 4123
 playlist.scroll.7 96
 playlist.scroll.cursorfollowplayback 1
 playlist.scroll.followplayback 1
@@ -116,16 +118,15 @@ playlist.stop_after_current 0
 playlist.stop_after_current_reset 0
 playlist.tab.00000 Shit
 playlist.tab.00001 All That Remains
-playlist.tab.00002 Autotheist Movement
-playlist.tab.00003 Chill
-playlist.tab.00004 Mazjojo
-playlist.tab.00005 Melodic Metal
-playlist.tab.00006 Metal
-playlist.tab.00007 shit
-prefwin.geometry.h 873
+playlist.tab.00002 Chill
+playlist.tab.00003 Melodic Metal
+playlist.tab.00004 Metal
+playlist.tab.00005 Mazjojo
+playlist.tab.00006 shit
+prefwin.geometry.h 842
 prefwin.geometry.w 1344
-prefwin.geometry.x 282
-prefwin.geometry.y 29
+prefwin.geometry.x 127
+prefwin.geometry.y 25
 replaygain_mode 0
 replaygain_scale 1
 resume.paused 0
@@ -137,8 +138,8 @@ search.column.01 "Artist" "%a" -1 202 0
 search.column.02 "Album" "%b" -1 179 0
 searchwin.geometry.h 526
 searchwin.geometry.w 865
-searchwin.geometry.x 348
-searchwin.geometry.y 184
+searchwin.geometry.x 350
+searchwin.geometry.y 300
 streamer.8_to_16 1
 trkproperties.geometry.h 400
 trkproperties.geometry.w 666
