--- a/deadbeef/config
+++ b/deadbeef/config
@@ -80,8 +80,8 @@ junk.enable_cp936_detection 1
 mainwin.geometry.h 622
 mainwin.geometry.maximized 1
 mainwin.geometry.w 1198
-mainwin.geometry.x 1764
-mainwin.geometry.y 217
+mainwin.geometry.x 1908
+mainwin.geometry.y 291
 mpris_v1.enable 0
 mpris_v2.enable 1
 network.http_user_agent deadbeef
@@ -95,50 +95,51 @@ playlist.column.01 "Title" "%t" -1 506 0
 playlist.column.02 "Artist" "%a" -1 219 0
 playlist.column.03 "Album" "%b" -1 243 0
 playlist.column.04 "Duration" "%l" -1 80 0
-playlist.current 5
-playlist.cursor.0 2016
-playlist.cursor.1 34
+playlist.current 0
+playlist.cursor.0 537
+playlist.cursor.1 -1
 playlist.cursor.2 -1
 playlist.cursor.3 -1
-playlist.cursor.4 -1
+playlist.cursor.4 34
 playlist.cursor.5 0
 playlist.cursor.6 0
-playlist.cursor.7 -1
-playlist.scroll.0 54090
-playlist.scroll.1 642
-playlist.scroll.2 2802
-playlist.scroll.3 0
-playlist.scroll.4 37586
+playlist.cursor.7 0
+playlist.scroll.0 14157
+playlist.scroll.1 6173
+playlist.scroll.2 0
+playlist.scroll.3 2802
+playlist.scroll.4 642
 playlist.scroll.5 0
-playlist.scroll.6 4123
-playlist.scroll.7 96
+playlist.scroll.6 0
+playlist.scroll.7 4123
 playlist.scroll.cursorfollowplayback 1
 playlist.scroll.followplayback 1
 playlist.stop_after_current 0
 playlist.stop_after_current_reset 0
 playlist.tab.00000 Shit
-playlist.tab.00001 All That Remains
-playlist.tab.00002 Chill
-playlist.tab.00003 Melodic Metal
-playlist.tab.00004 Metal
-playlist.tab.00005 Mazjojo
-playlist.tab.00006 shit
+playlist.tab.00001 Metal
+playlist.tab.00002 Melodic Metal
+playlist.tab.00003 Chill
+playlist.tab.00004 All That Remains
+playlist.tab.00005 Mushroomhead
+playlist.tab.00006 Mazjojo
+playlist.tab.00007 shit
 prefwin.geometry.h 842
 prefwin.geometry.w 1344
 prefwin.geometry.x 127
 prefwin.geometry.y 25
 replaygain_mode 0
 replaygain_scale 1
-resume.paused 0
+resume.paused 1
 resume.playlist 0
-resume.position -1.000000
-resume.track -1
+resume.position 1.0681176
+resume.track 1505
 search.column.00 "Title" "%t" -1 417 0
 search.column.01 "Artist" "%a" -1 202 0
 search.column.02 "Album" "%b" -1 179 0
 searchwin.geometry.h 526
 searchwin.geometry.w 865
-searchwin.geometry.x 350
+searchwin.geometry.x 733
 searchwin.geometry.y 300
 streamer.8_to_16 1
 trkproperties.geometry.h 400
