--- a/deadbeef/config
+++ b/deadbeef/config
@@ -2,7 +2,7 @@ cli_add_playlist_name shit
 cli_add_to_specific_playlist 1
 close_send_to_tray 1
 deadbeef_version 0.6.2
-filechooser.lastdir file:///mnt/data/Music/Playlists
+filechooser.lastdir file:///mnt/data/music
 filechooser.playlist.lastdir file:///home/kurotetsuka/Music/Playlists
 gtkui.color.bar_background 4587 4587 4587
 gtkui.color.bar_foreground 2875 34515 24955
@@ -28,7 +28,7 @@ gtkui.override_bar_colors 1
 gtkui.override_listview_colors 1
 gtkui.override_tabstrip_colors 1
 gtkui.statusbar.visible 1
-gtkui.tabscroll 107
+gtkui.tabscroll 0
 gtkui.titlebar_playing :: %a - %t ::
 gtkui.titlebar_stopped :: Deadbeef ::
 gui_plugin GTK3
@@ -73,15 +73,16 @@ hotkey.key38 "Shift Right" 0 0 seek_1p_fwd
 hotkey.key39 "Shift Left" 0 0 seek_1p_back
 hotkey.key40 "Right" 0 0 next
 hotkey.key41 "Left" 0 0 prev
+hotkey.key42 "space" 0 0 play_pause
 hotkeys_created 1
 ignore_archives 1
 junk.enable_cp1251_detection 1
 junk.enable_cp936_detection 1
-mainwin.geometry.h 622
-mainwin.geometry.maximized 1
-mainwin.geometry.w 1198
-mainwin.geometry.x 1942
-mainwin.geometry.y 25
+mainwin.geometry.h 735
+mainwin.geometry.maximized 0
+mainwin.geometry.w 1168
+mainwin.geometry.x 1866
+mainwin.geometry.y 188
 mpris_v1.enable 0
 mpris_v2.enable 1
 network.http_user_agent deadbeef
@@ -95,25 +96,31 @@ playlist.column.01 "Title" "%t" -1 506 0
 playlist.column.02 "Artist" "%a" -1 219 0
 playlist.column.03 "Album" "%b" -1 243 0
 playlist.column.04 "Duration" "%l" -1 80 0
-playlist.current 0
-playlist.cursor.0 66
-playlist.cursor.1 0
+playlist.current 10
+playlist.cursor.0 927
+playlist.cursor.1 119
+playlist.cursor.10 17
+playlist.cursor.11 109
 playlist.cursor.2 -1
-playlist.cursor.3 -1
-playlist.cursor.4 -1
-playlist.cursor.5 34
-playlist.cursor.6 0
-playlist.cursor.7 0
-playlist.cursor.8 0
-playlist.scroll.0 12645
-playlist.scroll.1 0
+playlist.cursor.3 0
+playlist.cursor.4 3
+playlist.cursor.5 209
+playlist.cursor.6 34
+playlist.cursor.7 17
+playlist.cursor.8 288
+playlist.cursor.9 2
+playlist.scroll.0 25670
+playlist.scroll.1 3040
+playlist.scroll.10 99
+playlist.scroll.11 2766
 playlist.scroll.2 6173
 playlist.scroll.3 0
-playlist.scroll.4 2802
-playlist.scroll.5 642
-playlist.scroll.6 0
-playlist.scroll.7 0
-playlist.scroll.8 4123
+playlist.scroll.4 0
+playlist.scroll.5 5349
+playlist.scroll.6 642
+playlist.scroll.7 284
+playlist.scroll.8 7778
+playlist.scroll.9 0
 playlist.scroll.cursorfollowplayback 1
 playlist.scroll.followplayback 1
 playlist.stop_after_current 0
@@ -121,31 +128,35 @@ playlist.stop_after_current_reset 0
 playlist.tab.00000 Shit
 playlist.tab.00001 Liked
 playlist.tab.00002 Metal
-playlist.tab.00003 Melodic Metal
-playlist.tab.00004 Chill
-playlist.tab.00005 All That Remains
-playlist.tab.00006 Mushroomhead
-playlist.tab.00007 Mazjojo
-playlist.tab.00008 shit
-prefwin.geometry.h 842
-prefwin.geometry.w 1344
-prefwin.geometry.x 127
-prefwin.geometry.y 25
+playlist.tab.00003 Melodic
+playlist.tab.00004 Melodic Metal
+playlist.tab.00005 Chill
+playlist.tab.00006 All That Remains
+playlist.tab.00007 Mushroomhead
+playlist.tab.00008 Arch Enemy
+playlist.tab.00009 Mazjojo
+playlist.tab.00010 Zoe
+playlist.tab.00011 shit
+prefwin.geometry.h 688
+prefwin.geometry.w 1194
+prefwin.geometry.x 141
+prefwin.geometry.y 112
 replaygain_mode 0
 replaygain_scale 1
 resume.paused 1
-resume.playlist 0
-resume.position 105.20332
-resume.track -1
+resume.playlist 10
+resume.position 429.19213
+resume.track 17
 search.column.00 "Title" "%t" -1 417 0
 search.column.01 "Artist" "%a" -1 202 0
 search.column.02 "Album" "%b" -1 179 0
-searchwin.geometry.h 526
-searchwin.geometry.w 865
-searchwin.geometry.x 475
+searchwin.geometry.h 613
+searchwin.geometry.maximized 0
+searchwin.geometry.w 1140
+searchwin.geometry.x 458
 searchwin.geometry.y 300
 streamer.8_to_16 1
-trkproperties.geometry.h 400
-trkproperties.geometry.w 666
-trkproperties.geometry.x 2561
-trkproperties.geometry.y 400
+trkproperties.geometry.h 412
+trkproperties.geometry.w 841
+trkproperties.geometry.x 568
+trkproperties.geometry.y 407
